--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.1.3",
+    "@reach/router": "^1.2.1",
+    "aws-amplify": "^1.1.30",
+    "aws-amplify-react": "^2.3.10",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
